Mar 15 2004  devel  Split gpsmap sample manipulation voodoo off into its own
                     file for other utils to tie into
Mar 13 2004  devel  Updated readme, added client column lists
                    Added unmonitor support for madwifi
                    Added switch to gpsmap to use old pure-average network 
                     center finding code
                    Moved fifodump out of logging, fifo will still happen with
                     '-n' now
                    Added fourth optional parameter to source= config lines to
                     set the initial channel
                    Updated spec file
Mar 12 2004  devel  Changed sound exec to dup2 /dev/null instead of closing
                     stdout and stderr, should prevent sox being mad about
                     not having output paths
Mar 11 2004  devel  Made blanking SSID during entering monitor mode a nonfatal
                     condition.  Should alleviate difficulties with some
                     drivers (prism54, maybe cisco)
                    Added large-file checking and defines, should overcome the
                     2GB file size limit on systems that support it
                    Changed versioning (again) - YYYY-MM-Release.
Mar 10 2004  devel  Fixed a segfault in the client command protocol
                    Improved error reporting for madwifi monitor mode
Mar 08 2004  devel  Fixed a segfault with a 0-length macaddr struct (exposed
                     by an empty manuf map file).  No security implications.
                    Changed ifdef block in pcapsource, added ifndef to 
                     compensate for pcap on some platforms
Mar 07 2004  devel  Fixed another bsd compile error
                    Revamped error reporting to print errors to console even
                     when silent if there are no clients.  Should force showing
                     fast-startup errors that got hidden before.