@@ -1,5 +1,7 @@
 Mar 15 2004  devel  Split gpsmap sample manipulation voodoo off into its own
                      file for other utils to tie into
+                    Started adding extras/ util to sanitize XML files for other
+                     programs to use
 Mar 13 2004  devel  Updated readme, added client column lists
                     Added unmonitor support for madwifi
                     Added switch to gpsmap to use old pure-average network 
